[workspace]
members = [
	 "worker",
	 "worker/worker-api",
	 "substratee-node-primitives",
	 "client",
	 "stf",
#	 "enclave",
]


#only while debugging
#[patch."https://github.com/encointer/pallets"]
#pallet-encointer-ceremonies = { path = "../encointer-pallets/ceremonies" }
#pallet-encointer-currencies = { path = "../encointer-pallets/currencies" }
#pallet-encointer-balances = { path = "../encointer-pallets/balances" }
#pallet-encointer-scheduler = { path = "../encointer-pallets/scheduler" }
#[patch."https://github.com/scs/pallet-substratee-registry.git"]
#pallet-substratee-registry = { path = "../pallet-substratee-registry" }