[package]
name = "substratee-stf"
version = "0.6.14"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
edition = "2018"

[features]
default = ["std"]
sgx = [
    "sgx_tstd",
    "env_logger",
    "log-sgx",
    "sp-io",
    "sgx-runtime",
    "derive_more",
]
std = [
    "clap",
    "clap-nested",
    "log",
    "base58",
    "sc-keystore",
    "system/std",
    "metadata/std",
    "sp-core/std",
    "encointer-ceremonies/std",
    "hex",
    "substrate-api-client",
    "substrate-client-keystore",
    "my-node-runtime"
]

[dependencies]
log-sgx             = { package = "log", git = "https://github.com/mesalock-linux/log-sgx", optional = true }
env_logger          = { git = "https://github.com/mesalock-linux/env_logger-sgx", optional = true }
clap                = { version = "2.33", optional = true }
clap-nested         = { version = "0.3.1", optional = true }
log                 = { version = "0.4", optional = true }
base58 			    = { version = "0.1", optional = true }
derive_more         = { version = "0.99.5", optional = true }
hex                 = { version = "*", optional = true }

[dependencies.sgx_tstd]
git = "https://github.com/apache/teaclave-sgx-sdk.git"
features = ["untrusted_fs","net","backtrace"]
rev = "v1.1.3"
optional = true

[dependencies.codec]
default-features = false
package = "parity-scale-codec"
version = "1.3.1"
features = ["derive"]

[dependencies.encointer-scheduler]
default-features = false
git = "https://github.com/encointer/pallets"
tag = "v0.3.7"
package = "pallet-encointer-scheduler"

[dependencies.encointer-ceremonies]
default-features = false
git = "https://github.com/encointer/pallets"
tag = "v0.3.7"
package = "pallet-encointer-ceremonies"

[dependencies.encointer-currencies]
default-features = false
git = "https://github.com/encointer/pallets"
tag = "v0.3.7"
package = "pallet-encointer-currencies"

[dependencies.encointer-balances]
default-features = false
git = "https://github.com/encointer/pallets"
tag = "v0.3.7"
package = "pallet-encointer-balances"

[dependencies.fixed]
default-features = false
git = "https://github.com/encointer/substrate-fixed"
tag = "v0.5.4+sub_v0.1"
package = "substrate-fixed"

[dependencies.my-node-runtime]
git = "https://github.com/encointer/encointer-node"
tag = "v0.3.8-tee"
package = "encointer-node-teeproxy-runtime"
optional = true

[dependencies.system]
default-features = false
package = 'frame-system'
git = "https://github.com/paritytech/substrate.git"
rev = "a208da16"

[dependencies.support]
default-features = false
package = 'frame-support'
git = "https://github.com/paritytech/substrate.git"
rev = "a208da16"

[dependencies.metadata]
git = "https://github.com/paritytech/substrate.git"
rev = "a208da16"
package = "frame-metadata"
default-features=false

[dependencies.sp-core]
git = "https://github.com/paritytech/substrate.git"
rev = "a208da16"
default-features = false
features = ["full_crypto"]

[dependencies.sp-application-crypto]
git = "https://github.com/paritytech/substrate.git"
rev = "a208da16"
default-features = false
features = ["full_crypto"]

[dependencies.sp-runtime]
git = "https://github.com/paritytech/substrate.git"
rev = "a208da16"
default-features = false

[dependencies.sp-io]
default-features = false
git = "https://github.com/encointer/sgx-runtime"
tag = "v0.6.15"
features = ["disable_oom", "disable_panic_handler", "disable_allocator", "sgx"]
optional = true

[dependencies.sgx-runtime]
default-features = false
git = "https://github.com/encointer/sgx-runtime"
tag = "v0.6.15"
optional = true

[dependencies.substrate-api-client]
git = "https://github.com/scs/substrate-api-client"
tag = "v0.4.13"
optional = true

[dependencies.substrate-client-keystore]
git = "https://github.com/scs/substrate-api-client"
tag = "v0.4.13"
optional = true

[dependencies.sc-keystore]
git = "https://github.com/paritytech/substrate.git"
rev = "a208da16"
optional = true

[dev-dependencies.sp-keyring]
git = "https://github.com/paritytech/substrate.git"
rev = "a208da16"
